Fix emblem alignment

--- a/assets/src/public/styles/critical/shared/_turns.scss
+++ b/assets/src/public/styles/critical/shared/_turns.scss
@@ -106,6 +106,8 @@
         &__emblem {
             grid-column: 1;
             grid-row: 1;
+            display: flex;
+            justify-content: center;
 
             &__img {
                 max-width: 2rem;
